--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@types/node": "^16.18.21",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
+    "dotenv": "^16.0.3",
+    "jotai": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.6.1",
     "tw-elements": "^1.0.0-beta1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
