--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.60.0",
     "socket.io-client": "^4.6.1",
     "tw-elements": "^1.0.0-beta1",
     "typescript": "^4.9.5",
