--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "socket.io-client": "^4.6.1",
     "tw-elements": "^1.0.0-beta1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4", 
-    "proxy": "https://itransition-task6-backend-production.up.railway.app"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
